# Satoshi_3

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  build_debug.bat  build_release.bat
Sandbox/src/include/: DevLayer.hpp  GraphicsWindow.hpp  MainApplication.hpp  MainWindow.hpp  RenderTimer.hpp  sdbpch.hpp
Sandbox/src/lib/: DevLayer.cpp  GraphicsWindow.cpp  MainApplication.cpp  MainWindow.cpp  RenderTimer.cpp  SandboxApp.cpp
Satoshi/src/include/: Hello.hpp  Satoshi.hpp  stpch.hpp
Satoshi/src/include/Platform/Graphics/D3D11/: D3D11Buffer.hpp  D3D11Context.hpp  D3D11Shader.hpp  D3D11ShaderCompiler.hpp  D3D11ShaderManager.hpp
Satoshi/src/include/Platform/Graphics/D3D12/: D3D12Buffer.hpp  D3D12Context.hpp  D3D12Shader.hpp  D3D12ShaderCompiler.hpp  D3D12ShaderManager.hpp
Satoshi/src/include/Platform/Graphics/GL4/: GL4Buffer.hpp  GL4Context.hpp  GL4Shader.hpp  GL4ShaderCompiler.hpp  GL4ShaderManager.hpp
Satoshi/src/include/Platform/Graphics/VK/: VKBuffer.hpp  VKContext.hpp  VKShader.hpp  VKShaderCompiler.hpp  VKShaderManager.hpp
Satoshi/src/include/Platform/Window/Win32/: Win32Input.hpp  Win32InputMapper.hpp  Win32Window.hpp
Satoshi/src/include/Satoshi/Core/: Application.hpp  ApplicationStarter.hpp  Console.hpp  Core.hpp  Entrypoint.hpp  ImplLayer.hpp  InEngineApplication.hpp  Layer.hpp  LayerStack.hpp
Satoshi/src/include/Satoshi/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
Satoshi/src/include/Satoshi/Renderer/: Buffer.hpp  GraphicsContext.hpp  RendererAPI.hpp  Shader.hpp  ShaderCompiler.hpp  ShaderManager.hpp
Satoshi/src/include/Satoshi/Utils/: FileHandler.hpp
Satoshi/src/include/Satoshi/Window/: Input.hpp  InputCodes.hpp  KeyCodes.hpp  MouseCodes.hpp  Window.hpp
Satoshi/src/lib/: Hello.cpp
Satoshi/src/lib/Platform/Graphics/D3D11/: D3D11Buffer.cpp  D3D11Context.cpp  D3D11Shader.cpp  D3D11ShaderCompiler.cpp  D3D11ShaderManager.cpp
Satoshi/src/lib/Platform/Graphics/D3D12/: D3D12Buffer.cpp  D3D12Context.cpp  D3D12Shader.cpp  D3D12ShaderCompiler.cpp  D3D12ShaderManager.cpp
Satoshi/src/lib/Platform/Graphics/GL4/: GL4Buffer.cpp  GL4Context.cpp  GL4Shader.cpp  GL4ShaderCompiler.cpp  GL4ShaderManager.cpp
Satoshi/src/lib/Platform/Graphics/VK/: VKBuffer.cpp  VKContext.cpp  VKShader.cpp  VKShaderCompiler.cpp  VKShaderManager.cpp
Satoshi/src/lib/Platform/Window/Win32/: Win32Input.cpp  Win32InputMapper.cpp  Win32Window.cpp
Satoshi/src/lib/Satoshi/Core/: Application.cpp  ApplicationStarter.cpp  Console.cpp  ImplLayer.cpp  InEngineApplication.cpp  Layer.cpp  LayerStack.cpp
Satoshi/src/lib/Satoshi/Renderer/: Buffer.cpp  GraphicsContext.cpp  RendererAPI.cpp  Shader.cpp  ShaderCompiler.cpp  ShaderManager.cpp
Satoshi/src/lib/Satoshi/Utils/: FileHandler.cpp
Satoshi/src/lib/Satoshi/Window/: Input.cpp  Window.cpp
assets/shaders/GLSL/: Test.cs.glsl  Triangle.ps.glsl  Triangle.vs.glsl
assets/shaders/HLSL/: Test.cs.hlsl  Triangle.ps.hlsl  Triangle.vs.hlsl
installer/: d3d12_mem_installer.bat  eigen_installer.bat  glad_installer.bat  jsoncpp_installer.bat  nlohmann_json_installer.bat  shaderc_installer.bat  spdlog_installer.bat  vk_mem_installer.bat  vulkan_installer.bat  wx_widgets_installer.bat
